# qemu-nc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: compile.md  generate_deletate_src.md  qemu.md
include/x64nc/: call_helper.h  guestapi.h  hostapi.h  loaderapi.h  syscall_helper.h  wrapper_helper.h  x64nc_common.h  x64nc_global.h
scripts/: cfiadd.py  cfiadd_cc.py  delegen.py  ncconfig.json  ncicol.py  ncifilter.py  ncistat.py  split_cc.py  util.py
scripts/delegen_resources/: Makefile  Makefile.in  x64nc_delegate_guest.c  x64nc_delegate_guest.cpp  x64nc_delegate_host.c  x64nc_delegate_host.cpp  x64nc_shared.h
scripts/python/: clang.py  text.py
src/: CMakeLists.txt  x64ncConfig.cmake.in
src/guestrt/: CMakeLists.txt  guestapi_extra.c  guestapi_loadapi.c  guestapi_proc.c  guestapi_variadic.c  loaderapi.c  syscall_helper.h
src/hostrt/: CMakeLists.txt  hostapi.cpp
src/libraries/base/api/: CMakeLists.txt  main.h
src/libraries/base/guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/base/host_bridge/: CMakeLists.txt  main.cpp
src/loaderapi/: CMakeLists.txt  loaderapi.cpp
